[project]
name = "Python-PCG"
version = "0.1.1"
authors = [
    { name  = "Matthijs Wesseling", email = "matthijs.wesseling@dyme.app" },
]

description = "Python wrapper around the PCG c++ library."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/Bladieblah/PyPCG"
"Bug Tracker" = "https://github.com/Bladieblah/PyPCG/issues"

[build-system]
requires = [
    "setuptools >= 42",
    "numpy >= 1.21.6",
]
build-backend = "setuptools.build_meta"
