[metadata]
name = dyme_module
version = 1.0
author = John Doe
author_email = john.doe@dyme.app
description = Template for python based microservices.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dyme-org/dyme-module
project_urls =
    Bug Tracker = https://github.com/dyme-org/dyme-module/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = dyme_module
python_requires = >=3.7
install_requires =
    numpy >=1.21.6
    joblib == 1.1.0
    scikit-learn >=1.0
    scipy >=1.7.2
    rapidfuzz ==1.8.2
    pybktree ==1.1
    natsort ==8.1.0