[metadata]
name = PyPCG
version = 1.0
author = Matthijs Wesseling
author_email = matthijs.wesseling@dyme.app
description = Python wrapper around the PCG c++ library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dyme-org/dyme-module
project_urls =
    Bug Tracker = https://github.com/Bladieblah/PyPCG/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = py_pcg
python_requires = >=3.7